{{$NEXT}}

0.21   2015-07-17

- If PERL_TEST_DM_CPAN_VERBOSE was true and Test::More had not been loaded in
  the process you would get an error. GH #9.


0.20   2014-08-31

- The use of MetaCPAN::Client was a bit broken. Patch by Sawyer X. PR #8.


0.19   2014-06-26

- Switched from the now deprecated MetaCPAN::API to the shiny new
  MetaCPAN::Client. Patch by Mickey. PR #7.


0.18   2014-05-04

- A distro which used Module::Build and ran no tests would be marked as
  failure. Fixed by Graham Knop.

- Under debug mode, the output from the CPAN module's init phase is no longer
  output via diag() calls. Patch by Graham Knop.

- Better handling of module prereqs which in turn share prereqs with the
  module we're installing. Patch by Graham Knop.


0.17   2013-07-13

- Packaging fixes so CPAN ignores our test corpus modules. Patch by Graham
  Knopp.


0.16   2013-07-13

- Distros where all tests are skipped or where no tests exist are considered
  as passing. Previously they were a failure. Fixed by Graham Knopp.

- Added some real tests. Written by Graham Knopp.


0.15   2013-05-13

- The change in 0.14 broke non-parallel testing in the test_modules()
  subroutine. This was my fault, not Graham's. Reported by Graham Knopp.


0.14   2013-03-13

- Fix a bug where the value of $_ in a loop could be overwritten in
  test_modules. Patch by Graham Knopp.


0.13   2012-04-19

- Use MetaCPAN to look up reverse dependencies instead of CPANDB. Patch by
  Jesse Luehrs.

- Silence all of the test running and installing. Patch by Jesse Luehrs.

- Avoid dying on avoidable errors (turn them into test fails or skips as
  appropriate). Patch by Jesse Luehrs.

- Use Test::Builder instead of Test::More so $TODO works properly. Also, mark
  todo tests in the log files. Patch by Jesse Luehrs.

- The test_module sub now also initializes the log files. Patch by Jesse
  Luehrs.

- A distro's configure_requires prereqs are now respected. Patch by Jesse
  Luehrs.


0.12   2011-07-20
