@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- The test_all_dependents() sub now lets you pass a filter subroutine instead
+  of an exclude regex. This is a lot simpler to implement in many cases.
+
+
 0.21   2015-07-17
 
 - If PERL_TEST_DM_CPAN_VERBOSE was true and Test::More had not been loaded in
